crates/brasa_lexer/src/snapshots/brasa_lexer__tests__example_program.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(r##\"import std::fs\nimport std::json\n\nstruct Repo\n  name: string\n  stars: int\nend\n\ndef topRepos(path: string, min: int): Vector<Repo>\n  let data = json.parse(fs.read(path))\n  data.repos\n    |> filter(|r| r.stars >= min)\n    |> sortBy(|r| -r.stars)\nend\n\nlet repos = topRepos(\"repos.json\", 100) catch (e)\n  fs.NotFound => []\nend\n\nfor repo in repos\n  puts \"#{repo.name}: #{repo.stars}\"\nend\n\"##)"
---
Import "import"
Ident "std"
ColonColon "::"
Ident "fs"
Newline "\n"
Import "import"
Ident "std"
ColonColon "::"
Ident "json"
Newline "\n"
Newline "\n"
Struct "struct"
TypeIdent "Repo"
Newline "\n"
Ident "name"
Colon ":"
Ident "string"
Newline "\n"
Ident "stars"
Colon ":"
Ident "int"
Newline "\n"
End "end"
Newline "\n"
Newline "\n"
Def "def"
Ident "topRepos"
LParen "("
Ident "path"
Colon ":"
Ident "string"
Comma ","
Ident "min"
Colon ":"
Ident "int"
RParen ")"
Colon ":"
TypeIdent "Vector"
Lt "<"
TypeIdent "Repo"
Gt ">"
Newline "\n"
Let "let"
Ident "data"
Eq "="
Ident "json"
Dot "."
Ident "parse"
LParen "("
Ident "fs"
Dot "."
Ident "read"
LParen "("
Ident "path"
RParen ")"
RParen ")"
Newline "\n"
Ident "data"
Dot "."
Ident "repos"
Newline "\n"
PipeGt "|>"
Ident "filter"
LParen "("
Pipe "|"
Ident "r"
Pipe "|"
Ident "r"
Dot "."
Ident "stars"
GtEq ">="
Ident "min"
RParen ")"
Newline "\n"
PipeGt "|>"
Ident "sortBy"
LParen "("
Pipe "|"
Ident "r"
Pipe "|"
Minus "-"
Ident "r"
Dot "."
Ident "stars"
RParen ")"
Newline "\n"
End "end"
Newline "\n"
Newline "\n"
Let "let"
Ident "repos"
Eq "="
Ident "topRepos"
LParen "("
StringStart "\""
StringText "repos.json"
StringEnd "\""
Comma ","
Int "100"
RParen ")"
Catch "catch"
LParen "("
Ident "e"
RParen ")"
Newline "\n"
Ident "fs"
Dot "."
TypeIdent "NotFound"
FatArrow "=>"
LBracket "["
RBracket "]"
Newline "\n"
End "end"
Newline "\n"
Newline "\n"
For "for"
Ident "repo"
In "in"
Ident "repos"
Newline "\n"
Ident "puts"
StringStart "\""
InterpStart "#{"
Ident "repo"
Dot "."
Ident "name"
InterpEnd "}"
StringText ": "
InterpStart "#{"
Ident "repo"
Dot "."
Ident "stars"
InterpEnd "}"
StringEnd "\""
Newline "\n"
End "end"
Newline "\n"
Eof ""
