crates/brasa_lexer/src/snapshots/brasa_lexer__tests__float_exp.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"1.0e-9\")"
---
Float "1.0e-9"
Eof ""
