crates/brasa_lexer/src/snapshots/brasa_lexer__tests__int_binary.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"0b10_10\")"
---
Int "0b10_10"
Eof ""
