crates/brasa_lexer/src/snapshots/brasa_lexer__tests__int_hex.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"0xFF_AB\")"
---
Int "0xFF_AB"
Eof ""
