crates/brasa_lexer/src/snapshots/brasa_lexer__tests__int_underscored.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"1_000_000\")"
---
Int "1_000_000"
Eof ""
