crates/brasa_lexer/src/snapshots/brasa_lexer__tests__keyword_catch_not_eq.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"catch!=x\")"
---
Catch "catch"
NotEq "!="
Ident "x"
Eof ""
