crates/brasa_lexer/src/snapshots/brasa_lexer__tests__keyword_catch_plain.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"catch\")"
---
Catch "catch"
Eof ""
