crates/brasa_lexer/src/snapshots/brasa_lexer__tests__keyword_do_vs_ident.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"do door\")"
---
Do "do"
Ident "door"
Eof ""
