crates/brasa_lexer/src/snapshots/brasa_lexer__tests__keyword_if_vs_ident.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"if iffy\")"
---
If "if"
Ident "iffy"
Eof ""
