crates/brasa_lexer/src/snapshots/brasa_lexer__tests__lambda_no_params.snap
---
source: crates/brasa_lexer/src/tests.rs
expression: "render(\"|_|\")"
---
Pipe "|"
Underscore "_"
Pipe "|"
Eof ""
